<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_inicio"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/inicio" />
    <item
        android:id="@+id/nav_categorias"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/categorias" />
    <item
        android:id="@+id/nav_ofertas"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/ofertas" />
    <item
        android:id="@+id/nav_perfil"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/perfil" />
    <item
        android:id="@+id/nav_carrito"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/carrito" />
    <item
        android:id="@+id/nav_cerrar_sesion"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/cerrar_sesion" />
</menu>